  resort to SNMP engine uptime reading.
- SNMPv2c Message is now defined in rfc1901.py what matches standard definition.
- Types defined within SNMPv1/v2c data structures (rfc1157.py/rfc1905.py)
  moved to module scope to become accessible by wrapper routines
  (v1.py/v2c.py). This is used for setting strictly typed default values
  to corresponding SNMP data structures.
- Fix to v1.PDUAPI.setDefaults() method that used to set wrongly typed
  time-stamp component.
- Fix to IPv6 address handling to prevent system from crashing whilst
  running Python3. 
- Fix to SNMPv2 exception objects translation into SNMPv1 PDU and NEXT
  OIDs calculation.
- Fix to MibTree class to properly report noSuchObject & noSuchInstance
  SNMP special values.
- Fix to libsmi2pysnmp tool to make it working again in Python < 2.7
- Fix to exception handling at decodeMessageVersion() caller to prevent
  ASN.1 parsing errors crashing the whole app.
- Fix to GenericTrap type processing at rfc2576:v1Tov2c() which used to
  crash the whole SNMP engine.
- Typo fix to snmpInASNParseErrs MIB instance object.
- Typo fix to errind.EngineIdMismatch class and its instance.

Revision 4.2.2
--------------

- Oneliner CommandGenerator can now limit the number of SNMP table
  rows returned by nextCmd()/bulkCmd() methods.
- Oneliner CommunityData configuration object can now be initialized
  with community name only, security name will be chosen automatically.
- Oneliner LCD configuration routines reworked towards clarity. The
  side-effect of this change is that repetitive oneliner call with the same
  securityName and different configuration options will only honor
  the first settings. Previous implementation would override older settings.
- Transport dispatcher now provides its own time expressed in 
  fractions of second. SNMP engine uses this notion of time for
  handling requests timeout to make packet flow time bound
  to async I/O core operations rather than to real time.